--- a/app/view/album-share-email.html
+++ b/app/view/album-share-email.html
@@ -1,8 +1,12 @@
 <h1>{name} share an album to you</h1>
-<div>Album Name : &nbsp;AAAAA</div>
+<div>Album Name : {ablum-text}</div>
 <div>Album Pictures:</div>
-<div>1111 &nbsp; &nbsp; 1111 &nbsp; &nbsp; &nbsp;1111&nbsp;</div>
+<div>
+    <img src="{image1}" style="width:200px;height:100px;">
+    <img src="{image2}" style="width:200px;height:100px;">
+    <img src="{image3}" style="width:200px;height:100px;">
+</div>
 <div><br /></div>
-<div>Login</div>
-<div>Register</div>
+<div><a href="http://silver.bryht.net/" target="_blank">Login</a></div>
+<div><a href="http://silver.bryht.net/login/register?mail={mail}" target="_blank">Register</a></div>
 <div><br /></div>
