--- a/app/view/common/layout-main.html
+++ b/app/view/common/layout-main.html
@@ -39,9 +39,12 @@
             <!-- Logo -->
             <a href="#" class="logo">
                 <!-- mini logo for sidebar mini 50x50 pixels -->
-                <span class="logo-mini"><b>P</b>lay</span>
+                <span class="logo-mini"><img src="/app/assets/img/moon_32px_1206584_easyicon.net.png" alt=""></span>
                 <!-- logo for regular state and mobile devices -->
-                <span class="logo-lg"><b>Kinds</b>Play</span>
+                <span class="logo-lg">
+                     <img src="/app/assets/img/moon_32px_1206584_easyicon.net.png" alt="">
+                     <b>Kinds</b>Play
+                     </span>
             </a>
             <!-- Header Navbar: style can be found in header.less -->
             <nav class="navbar navbar-static-top">
@@ -130,7 +133,7 @@
             <!-- Main content -->
             <section class="content">
 
-                <!--{% block content %} {% endblock %}-->
+                {% block content %} {% endblock %}
 
             </section>
             <!-- /.content -->
@@ -157,6 +160,8 @@
     <script src="/app/assets/adminlte/plugins/fastclick/fastclick.js"></script>
     <!-- AdminLTE App -->
     <script src="/app/assets/adminlte/dist/js/app.js"></script>
+
+    <script src="/app/assets/js/util.js"></script>
     <script>
         (function(document) {
 
