--- a/app/view/user-edit.html
+++ b/app/view/user-edit.html
@@ -1,4 +1,4 @@
-{% extends "layout-main.html" %} {% block content %}
+{% extends "common/layout-main.html" %} {% block content %}
 
 <div class="tpl-content-wrapper">
     <div class="tpl-portlet-components">
