--- a/app/view/user-index.html
+++ b/app/view/user-index.html
@@ -1,5 +1,6 @@
 {% extends "common/layout-main.html" %} {% block content %}
 
+
 <div class="col-xs-12">
     <div class="box">
         <div class="box-header with-border">
@@ -35,10 +36,9 @@
                         <td>{{user.login_time}}</td>
                         <td>
                             <div class="btn-toolbar">
-                                <button type="button" title="set auth" data-id="{{user.id}}" data-toggle="modal" data-target="#model-user-auth"  class="btn btn-primary"><i class="fa fa-group"></i></button>
+                                <button type="button" title="set auth" data-id="{{user.id}}" data-toggle="modal" data-target="#model-user-auth" class="btn btn-primary"><i class="fa fa-group"></i></button>
                                 <button type="button" title="edit" class="btn btn-info"><i class="fa fa-edit "></i></button>
-                                <button type="button" title="delete" class="btn btn-danger" data-id="{{user.id}}" data-name="{{user.name}}" data-avatar="{{user.avatar}}"
-                                    data-toggle="modal" data-target="#model-user-delete"><i class="fa fa-recycle"></i></button>
+                                <button type="button" title="delete" class="btn btn-danger" data-id="{{user.id}}" data-name="{{user.name}}" data-avatar="{{user.avatar}}" data-toggle="modal" data-target="#model-user-delete"><i class="fa fa-recycle"></i></button>
                             </div>
                         </td>
                     </tr>
@@ -69,10 +69,10 @@
                 <div class="modal-content">
                     <div class="modal-header">
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                        <h4 class="modal-title" id="labe">Sure to delete?</h4>
+                        <h4 class="modal-title" id="labe">Setting auth</h4>
                     </div>
                     <div class="modal-body">
-                        1111
+                        <div id="auth-tree"></div>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-primary" data-dismiss="modal">Sure</button>
@@ -99,8 +99,10 @@
 </div>
 
 {% endblock %} {% block javascript %}
+<link rel="stylesheet" href="/app/assets/bootstrap-treeview/src/css/bootstrap-treeview.css">
+<script src="/app/assets/bootstrap-treeview/src/js/bootstrap-treeview.js"></script>
 <script>
-    (function (document) {
+    (function(document) {
         var pageNavLinks = document.getElementsByClassName('page-nav-link');
         for (var index = 0; index < pageNavLinks.length; index++) {
             var element = pageNavLinks[index];
@@ -108,22 +110,69 @@
             element.setAttribute('href', url);
         }
 
-
-
     })(document);
-    $('#model-user-auth').on('show.bs.modal', function (event) {
+
+    var tree = [{
+        text: "Parent 1",
+        state: {
+            checked: true
+        },
+        nodes: [{
+            text: "Child 1",
+            nodes: [{
+                text: "Grandchild 1"
+            }, {
+                text: "Grandchild 2"
+            }]
+        }, {
+            text: "Child 2"
+        }]
+    }, {
+        text: "Parent 1",
+        state: {
+            checked: true
+        },
+        nodes: []
+    }];
+
+    $('#model-user-auth').on('show.bs.modal', function(event) {
         var target = $(event.relatedTarget);
         var id = target.data('id');
         var name = target.data('name');
         var avatar = target.data('avatar');
         var modal = $(this);
 
+        $.get('/user/getAuth', function(res) {
 
+            var data = JSON.parse(res);
+
+            if (data.ok) {
+
+                var a = data.result;
+                debugger;
+                $('#auth-tree').treeview({
+                    data: tree,
+                    showCheckbox: true
+                });
+
+            } else {
+                alert(data.result);
+            }
+        });
+
+
+
+        modal.find('.btn-primary').unbind('click').click(() => {
+
+            var checkedList = $('#auth-tree').treeview('getChecked');
+            debugger;
+
+        });
 
     });
 
 
-    $('#model-user-delete').on('show.bs.modal', function (event) {
+    $('#model-user-delete').on('show.bs.modal', function(event) {
         var target = $(event.relatedTarget);
         var id = target.data('id');
         var name = target.data('name');
@@ -132,7 +181,7 @@
         modal.find('.modal-title').text('Sure to delete ' + name + ' ?')
         modal.find('.btn-primary').unbind('click').click(() => {
 
-            $.get('/user/userDelete?id=' + id, function (res) {
+            $.get('/user/userDelete?id=' + id, function(res) {
                 var data = JSON.parse(res);
                 if (data.ok) {
                     location.reload();
@@ -145,6 +194,5 @@
 
 
     });
-
 </script>
 {% endblock %}
