--- a/app/view/menu-index.html
+++ b/app/view/menu-index.html
@@ -15,6 +15,49 @@
     </div>
 </div>
 
+<div class="modal fade" id="model-menu" role="dialog" aria-labelledby="labe">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 id="modal-menu-title" class="modal-title"></h4>
+            </div>
+            <div id="modal-menu-body" class="modal-body">
+                <form id="form-menu" class="form-horizontal" action="">
+                    <div class="form-group">
+                        <label for="text-control" class="col-xs-2 control-label">Control</label>
+                        <div class="col-xs-10">
+                            <input type="text" class="form-control" id="text-control" required>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="text-action" class="col-xs-2 control-label">Action</label>
+                        <div class="col-xs-10">
+                            <input type="text" class="form-control" id="text-action">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="text-text" class="col-xs-2 control-label">Text</label>
+                        <div class="col-xs-10">
+                            <input type="text" class="form-control" id="text-text">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="text-icon" class="col-xs-2 control-label">Icon</label>
+                        <div class="col-xs-10">
+                            <input type="text" class="form-control" id="text-icon" placeholder="fa-files-o">
+                        </div>
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-primary" data-dismiss="modal">Sure</button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+            </div>
+        </div>
+    </div>
+</div>
+
 {% endblock %} {% block javascript %}
 <link rel="stylesheet" href="/app/assets/bootstrap-treeview/src/css/bootstrap-treeview.css">
 <script src="/app/assets/bootstrap-treeview/src/js/bootstrap-treeview.js"></script>
@@ -46,8 +89,29 @@
         var parentId = selected.id == undefined ? 0 : selected.id;
 
         //TODO: Show Modal
+        var model = $('#model-menu');
+        var form=$('#form-menu');
+        form.attr('action','/menu/add');
+        model.find('#modal-menu-title').html('Add Menu');
 
+        model.modal('show');
+        model.find('.btn-primary').unbind('click').click(() => {
+            form.submit();
+        });
         //TODO: Sure post
+
+        return;
+
+
+
+
+    }
+
+    function edit(item) {
+
+    }
+
+    function update(item) {
         $.post('/menu/add', {
             'parentId': parentId
         }, function (res) {
@@ -58,13 +122,6 @@
                 alert(data.result);
             }
         })
-
-
-
-    }
-
-    function edit(item) {
-
     }
 
     function del(item) {
